# OpenGL-1

./: .gitignore  CMakeLists.txt  README.md  readme
cmake-build/: Assignment1  CMakeCache.txt  Makefile  cmake_install.cmake  simple.frag  simple.vert
src/: .gitignore  geometry.cpp  glwindow.cpp  glwindow.h  main.cpp  simple.frag  simple.vert
src copy/: geometry.h  glwindow.cpp
